# vipertrade

./: .dockerignore  .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  ANALYSIS_DEEP_DIVE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  VIPERTRADE_SPEC.md  kind-config.yaml  rust-toolchain.toml
.githooks/: commit-msg  pre-push
.github/workflows/: ci-local-parity.yml  ci.yml
.kind-registry-config/localhost:5001/: hosts.toml
compose/: .env.example  docker-compose.host.yml  docker-compose.yml
config/analysts/: trade_diagnostics.tp
config/strategies/: viper_runtime_minimal.tp  viper_smart_copy.tp
config/system/: profiles.yaml
config/trading/: pairs.example.yaml  pairs.yaml  pairs.yaml.bak.20260626-080801  pairs.yaml.bak.20260626-200257
crates/viper-domain/: Cargo.toml
crates/viper-domain/src/: config.rs  lib.rs
database/: Dockerfile  init.sql  schema.sql
database/migrations/: 20260307_001_executor_fills_idempotency.sql  20260308_002_executor_fills_idempotency_down.sql  20260312_003_replace_trx_with_ada.sql  20260319_004_remove_symbol_hardcodes.sql  20260319_005_allow_thesis_invalidated_close_reason.sql  20260321_006_strategy_decision_audit.sql  20260611_007_tuning_reviews.sql  20260611_008_trading_config.sql
docker/base/: rust-builder-optimized.Dockerfile  rust-builder.Dockerfile  rust-runtime.Dockerfile  strategy-builder.Dockerfile  strategy-runtime.Dockerfile  web-node.Dockerfile
docs/: ARCHITECTURE_V2.md  DOCS_LINT_DEBT.md  PHASE1_PLAN.md  PHASE2_RISK_RECON_PLAN.md  PHASE3_LEAD_TRADER_API_PLAN.md  PHASE4_BACKTEST_PAPER_PLAN.md  PHASE5_CHECKLIST.md  PHASE5_SMARTCOPY_TRAILING_PLAN.md  PHASE6_MAINNET_READINESS_PLAN.md  PROJECT_PHASES.md  README.md  RELEASE_0.8.0_RC_NOTES.md  RELEASE_CHECKLIST.md  VIPERTRADE_SPEC.md
docs/contracts/: strategy-decision-event-v1.schema.json
docs/design/: web-experience-proposal.md
docs/legacy/: README.md  VIPERTRADE_SPEC.md
docs/operations/: API_ACCESS_MATRIX.md  PHASE4_BACKTEST_CONTRACT.md  PHASE4_BACKTEST_RUN_2026-03-08.md  PHASE4_BASELINE_2026-03-08.md  PHASE4_CONTROLLED_LIVE_2026-03-08.md  PHASE4_DECISION_PACKAGE_2026-03-08.md  PHASE4_PAPER_REGRESSION_2026-03-08.md  PHASE4_PROMOTION_GATE.md  PHASE4_TESTNET_MICRO_2026-03-08.md  PHASE5_BASELINE_2026-03-08.md  PHASE5_DECISION_PACKAGE_2026-03-08.md  PHASE5_PROMOTION_GATE.md  PHASE6_BASELINE_2026-03-08.md  PHASE6_DECISION_PACKAGE_2026-03-08.md  PHASE6_MAINNET_MICRO_2026-03-08.md  PHASE6_NO_MAINNET_POLICY.md  PHASE6_PROMOTION_GATE.md  PHASE6_TESTNET_MICRO_2026-03-08.md  RECONCILIATION_EVIDENCE.md  RELEASE_READINESS_PACKAGE_2026-03-08.md  RUNBOOK.md  ajustes-config-2026-04-01.md  ajustes-simbolos-2026-04-02.md  bugfix-trend-score-2026-04-02.md  monitoramento-pos-ajuste.md  reabilitacao-longs-2026-04-02.md
docs/releases/: README.md  RELEASE_0.8.0_RC_NOTES.md  RELEASE_CHECKLIST.md
docs/spec/: 01-overview.md  02-architecture.md  03-risk-and-profiles.md  04-bybit-integration.md  05-runtime-and-operations.md  06-validation-and-checklists.md  07-configuration.md  08-strategy-execution-model.md  README.md  cleanup-and-architecture-plan.md  viper_smart_copy.reference.tp
k8s/kind/: README.md  configmap.yaml  deployments.yaml  kustomization-resources.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  postgres.yaml  redis.yaml  secret.yaml  services.yaml
scripts/: build-base-images.sh  build-tupa.sh  check-api-metrics-consistency.sh  ci-local.sh  compose-host.sh  compose.sh  container-runtime.sh  data.sh  fix-podman-wsl-network.sh  health-check.sh  init-secrets.sh  install-git-hooks.sh  kill-switch-control.sh  make-help.py  monitor-pos-ajuste.sh  phase4-backtest-run.sh  phase4-controlled-live-gate.sh  phase4-paper-regression.sh  phase4-testnet-micro-gate.sh  phase4-validate.sh  phase5-validate.sh  phase6-testnet-micro-gate.sh  phase6-validate.sh  podman-remote.sh  publish-test-decision.sh  replay-mainnet-candles.sh  reset-paper-db.sh  security-check.sh  setup-dev.sh  setup-git-hooks.sh  test-config.sh  validate-db.sh  validate-pipeline.sh  validate-runtime.sh  validate-workspace.sh
scripts/docker/: wait-for-deps.sh
scripts/kind/: build-images.sh  delete.sh  deploy.sh  health-check.sh  prepare-wsl.sh  status.sh  update-secrets.sh  wipe.sh
scripts/lib/: common.sh
services/ai-analyst/: Cargo.toml  Dockerfile
services/ai-analyst/examples/: trade_diagnostics_input.json
services/ai-analyst/src/: agent.rs  lib.rs  main.rs  openrouter.rs  trade_diagnostics.rs  tuning_grid.rs
services/analytics/: Cargo.toml  Dockerfile
services/analytics/src/: lib.rs  main.rs
services/api/: Cargo.toml  Dockerfile
services/api/src/: bybit_client.rs  exchanges.rs  jwt_auth.rs  lib.rs  main.rs  position_config.rs  rate_limit.rs  state.rs
services/backtest/: Cargo.toml  Dockerfile
services/executor/: Cargo.toml  Dockerfile
services/executor/src/: bybit_client.rs  lib.rs  main.rs  orders.rs  reconciliation.rs  risk.rs  state.rs
services/executor/tests/: contract_fixtures.rs
services/executor/tests/fixtures/: close_long.json  close_short.json  enter_long.json  enter_short.json  hold.json
services/market-data/: Cargo.toml  Dockerfile
services/market-data/src/: consensus.rs  exchanges.rs  indicators.rs  lib.rs  main.rs
services/monitor/: Cargo.toml  Dockerfile
services/monitor/src/: lib.rs  main.rs
services/strategy/: Cargo.toml  Dockerfile
services/strategy/src/: ai_advice.rs  audit.rs  backtest.rs  config.rs  consecutive_losses.rs  cooldown.rs  daily_loss.rs  db.rs  decision.rs  equity_floor.rs  fetch.rs  filters.rs  funding.rs  helpers.rs  lib.rs  main.rs  signal_confirmation.rs  smart_size.rs  thesis.rs  thesis_confirmation.rs  trailing.rs  trailing_config.rs  tupa_extensions.rs  types.rs  validate_entry.rs  validate_size.rs
services/viper/: Cargo.toml  Dockerfile
services/viper/src/: main.rs
services/web/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  proxy.ts  (+2 more)
web/: Dockerfile  package-lock.json  package.json
(+149 files in other folders)
