[workspace]
members = [
    "crates/viper-domain",
    "services/market-data",
    "services/analytics",
    "services/strategy", 
    "services/executor",
    "services/monitor",
    "services/backtest",
    "services/api",
]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2021"
license = "MIT"
authors = ["ViperTrade Team"]
description = "Lead Trader Bot for Bybit Copy Trading Classic"
repository = "https://github.com/seu-usuario/vipertrade"

[workspace.dependencies]
viper-domain = { path = "crates/viper-domain" }

# Tupa v0.8.1
tupa-runtime = "0.8.1"
tupa-codegen = "0.8.1"
tupa-audit = "0.8.1"
tupa-effects = "0.8.1"
tupa-parser = "0.8.1"
tupa-typecheck = "0.8.1"

# Async runtime
tokio = { version = "1", features = ["full", "tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sha2 = "0.10"

# Redis
redis = { version = "0.27", features = ["tokio-comp"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Rate limiting
governor = "0.6"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[patch.crates-io]
tupa-runtime = { git = "https://github.com/marciopaiva/tupalang.git", rev = "021ffcfba7910ff7fba43047d371a394abe3055d" }
tupa-codegen = { git = "https://github.com/marciopaiva/tupalang.git", rev = "021ffcfba7910ff7fba43047d371a394abe3055d" }
tupa-audit = { git = "https://github.com/marciopaiva/tupalang.git", rev = "021ffcfba7910ff7fba43047d371a394abe3055d" }
tupa-effects = { git = "https://github.com/marciopaiva/tupalang.git", rev = "021ffcfba7910ff7fba43047d371a394abe3055d" }
tupa-parser = { git = "https://github.com/marciopaiva/tupalang.git", rev = "021ffcfba7910ff7fba43047d371a394abe3055d" }
tupa-typecheck = { git = "https://github.com/marciopaiva/tupalang.git", rev = "021ffcfba7910ff7fba43047d371a394abe3055d" }
