[package]
name = "viper-domain"
version.workspace = true
edition = "2021"
description = "Shared domain contracts for ViperTrade event streams"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
redis = { workspace = true }
