[package]
name = "viper-ai-analyst"
version = "0.9.0"
edition = "2021"
description = "ViperTrade AI-assisted trade analytics service"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tupa-core = { workspace = true }
tupa-engine = { workspace = true }
warp = "0.3"
viper-domain = { workspace = true }
