[package]
name = "viper-analytics"
version = "0.8.1"
edition = "2021"
description = "ViperTrade analytics service for exchange trend scoring"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
viper-domain = { workspace = true }
