[package]
name = "viper-analytics"
version = "0.9.0"
edition = "2021"
description = "ViperTrade analytics service for exchange trend scoring"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
viper-domain = { workspace = true }
warp = { workspace = true }
