[package]
name = "viper-executor"
version = "0.8.0-rc"
edition = "2021"
description = "ViperTrade executor service"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
redis = { workspace = true, features = ["tokio-comp"] }
futures-util = "0.3"
viper-domain = { workspace = true }
sha2 = { workspace = true }
hmac = "0.12"
hex = "0.4"
