[package]
name = "viper-market-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "ViperTrade market-data service"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
