[package]
name = "viper-market-data"
version = "0.8.0-rc"
edition = "2021"
description = "ViperTrade market-data service"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
viper-domain = { workspace = true }
