[package]
name = "viper-monitor"
version = "0.8.1"
edition = "2021"
description = "ViperTrade monitor service"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { workspace = true }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
redis = { workspace = true }
hmac = "0.12"
sha2 = { workspace = true }
hex = "0.4"
