[package]
name = "viper-strategy"
version = "0.8.0-rc"
edition = "2021"
description = "ViperTrade strategy service"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
futures-util = "0.3"
tupa-parser = { workspace = true }
tupa-codegen = { workspace = true }
tupa-runtime = { workspace = true }
tupa-typecheck = "0.8.0"
viper-domain = { workspace = true }

[features]
default = []
