[package]
name = "viper-strategy"
version = "0.9.0"
edition = "2021"
description = "ViperTrade strategy service"

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
redis = { workspace = true, features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
futures-util = "0.3"
chrono = { workspace = true }
reqwest = { workspace = true }
sha2 = "0.10"
hex = "0.4"
tupa-core = { workspace = true }
tupa-engine = { workspace = true }
viper-domain = { workspace = true }

[features]
default = []
